[tool.poetry]
name = "uvn-fira"
version = "1.3.0"
description = "The backend and API code for the Unscripted mini-game."
authors = ["Marquis Kurt <software@marquiskurt.net>"]
license = "MPL-2.0"
readme = "PYREADME.md"
homepage = "https://github.com/UnscriptedVN/fira"
documentation = "https://fira.marquiskurt.net"

[tool.poetry.dependencies]
python = ">= 3.7 || ~2.7.16"
toml = "^0.10.0"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
pylint = [{ version="^2.4.4", python=">=3.7" }]
pytest = [{ version = "^4.6", python="^2.7" }, { version = "^5.3.5", python=">3.5" }]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
