[tool.poetry]
name = "uvn-fira"
version = "2.0.0"
description = "The backend and API code for the Unscripted minigame."
authors = ["Marquis Kurt <software@marquiskurt.net>"]
license = "MPL-2.0"
readme = "PYREADME.md"
homepage = "https://github.com/UnscriptedVN/fira"
repository = "https://github.com/UnscriptedVN/fira"
documentation = "https://docs.unscriptedvn.dev/fira/"
classifiers = [
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = ">= 3.7 || ~2.7.16"
toml = "^0.10.0"
typing = "^3.7.4"
enum34 = [{version="^1.1.0", python="^2.7"}]

[tool.poetry.dev-dependencies]
pylint = [{ version="^2.4.4", python=">=3.7" }]
pytest = [{ version = "^4.6", python="^2.7" }, { version = "^5.3.5", python=">3.5" }]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
